# cylc-flow

./: .bandit  .codacy.yml  .codecov.yml  .coveragerc  .dockerignore  .flake8  .gitignore  .isort.cfg  .mailmap  .pre-commit-config.yaml  .travis.yml  .wci.yml  6103.fix.md  ACKNOWLEDGEMENT.md  CHANGES.md  CONTRIBUTING.md  ChangeLog.txt  INSTALL  INSTALL.md  MANIFEST.in  Makefile  README  README.dirs  README.install  README.md  README.run  README.todo  README.txt  README.update-docs  README.update-live-page  REG.ToDo.txt  SConstruct  SECURITY.md  TODO-optional-outputs.txt  TODOC.txt  ToDo.txt  ToDoc.txt  _config.yml  changed-items.txt  changelog.txt  (+125 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.travis/: after_failure.sh  after_script.sh  before_install.sh  cover.py  coverage-data.sh  install.sh  shellchecker  sitecustomize.py
BoM-Feb-2017/: index.html  template.html
CommsTest/: README
CylcSim/: README  client.py  server.py
TASK-FAMILY-MOD/: README.txt  broker.py  family.py  task.py  task_pool.py
_data/: screenshots.yml
_includes/: example.html  feature.html  figure.html  footer.html  header.html  progress.html  repository.html  time.html
_layouts/: default.html  frontpage.html
_site/: documentation.html  faq.html  features.html  index.html  license.html  screenshots.html  support.html  users.html
admin/: README.update-live-page  create-version-file  cylc-wrapper  cylclockd  cylclockd.conf  cylclockd.conf.test  get-repo-version  make-tarball  new-release.README  update-docs.sh  update-gh-pages.sh
changes.d/: 4983.fix.md  5090.feat.md  5237.feat.md  5452.feat.md  5562.fix.md  5571.feat.md  5600.break.md  5631.fix.md  5650.fix.md  5651.break.md  5658.feat.md  5660.fix.md  5685.fix.md  5693.fix.md  5694.fix.md  5698.feat.md  5704.fix.md  5708.fix.md  5709.feat.md  5721.feat.md  5727.break.md  5731.feat.md  5738.feat.md  5752.feat.md  5753.fix.md  5755.fix.md  5769.feat.md  5772.feat.md  5776.fix.md  5789.fix.md  5791.fix.md  5794.break.md  5801.fix.md  5803.feat.md  5809.break.d  5809.feat.d  5809.fix.d  5821.fix.md  5831.feat.md  5836.break.md  (+260 more)
conf/: CylcGlobals.py  DEPRECATED.md  cylc-bash-completion  cylc-mode.el  cylc.lang  cylc.vim  cylc.xml  housekeeping.eg  job-init-env-default.sh  lockserver.conf  preferences.spec  suite-config.spec  suite.rc  suiterc-cylc.spec  suiterc-head.spec  suiterc-runtime.spec  suiterc-visualization.spec  suiterc.defaults  suiterc.spec  suiterc.spec.ORIG
css/: main.css
cylc/: __main__.py
cylc-keynote-lisbon-Sept2016/: index.html  template.html
dev/: ToDo.txt  _embedded_xdot_with_urls  _suicide  cylc-predist.sh  family.py  filewalk.py  registration.py.dict  subprocdetect.py  tempfiles.txt  upgrade-taskdefs.sh  walk.py
doc/: Makefile  README  README.md  SuiteDesign.txt  abstract.tex  annotated-task-script.sh  changes-old.txt  changes.css  changes.html  cleanup.sh  comparison-sms-etc.tex  cug-html.cfg  cug-html.tex  cug-pdf.tex  cug.tex  cyclon-userguide.tex  cyclon.tex  cyclops.tex  cycon-userguide.tex  cycon.tex  cylc-abstract.txt  cylc-user-guide.tex  cylc-userguide.tex  cylc-view-ecoconnect.eps  cylc.tex  cylon-userguide.tex  cylon.tex  dependencies-one.eps  dependencies-two.eps  development.tex  eco-monitor.eps  gcylcrc.tex  generate-docs.sh  gpl-3.0.tex  graphviz.txt  gscanrc.tex  icycle-internals.tex  implementation.tex  index.css  index.html  (+23 more)
dockerfiles/: build  global.cylc  run  ssh_config
documentation/: documentation.txt  ecocontroller.tex  generate_ps.sh  interface.tex  sequenz.tex
etc/: README  README.md  cylc-bash-completion  cylc-tests.rst  cylc.server  gcylc-themes.rc  gcylc.rc.eg  global.rc.eg
example/: config.py  task_classes.py
example-system/: README
examples/: README
ext/: ordereddict-0.4.5.tgz
flakytests/: README.md  lib
images/: led-empty.xpm  led-failed-glow.xpm  led-finished.xpm  led-running-glow.xpm  led-submitted-glow-orange.xpm  led-submitted-glow.xpm  led-waiting-glow.xpm  leds-small.xcf  leds.xcf
img/: suite.rc
install/: README  create-cdb.sh
itests/: README.md  __init__.py  conftest.py  test_client.py  test_data_store_mgr.py  test_examples.py  test_foo.py  test_framework.py  test_publisher.py  test_resolvers.py
lib/: OrderedDict.py  configobj.py  em.py  isodatetime.py  tornado_http_auth.py  validate.py  wallclock.py  xdot.py
libcylc/: Makefile  client.c  configuration.c  configuration.h  configure.ac  cpyro.c  digest.c  hmac-sha1.c  hmac.h  memxor.c  memxor.h  message.c  message.h  pickle_protocol.py  sha1.c  sha1.h  socket.c
licences/: LICENSE-MIT-PYRO
obsolete/: cylc-task-lock
proto/: buf.gen.yaml
sbin/: cylc-wrapper
scaling/: README  defgen.py
scripts/: README.txt  cycle-time  cylc-time  cylc-wrapper  file_transfer.sh  get-filename  rolling-archive
src/: CylcError.py  CylcOptionParsers.py  CylcSafeConfigParser.py  OrderedDict.py  accelerated_clock.py  as_owner.py  asynchronous_task.py  at_now.py  background.py  background2.py  background_remote.py  batchproc.py  broker.py  check_switch.py  coldstart.py  combo_logviewer.py  config.py  config.py.OLD  config.rc  config.spec  connector.py  connectors.py  control.py  cycle_time.py  cycling_task.py  cylc.py  cylc_logviewer.py  cylc_mode.py  cylc_pyro_client.py  cylc_pyro_ns.py  cylc_pyro_server.py  cylc_xdot.py  cylcconfigobj.py  cylcrc.py  dead_letter.py  dummy.py  dummy_mode_clock.py  dynamic_instantiation.py  execute.py  execution.py  (+76 more)
suites/: README
sys/: README.sys
system-def/: README.system-def
systems/: README  README.sys
task-definitions/: README  README.task-definitions  full_template.def  generate_task_classes.py  simple_example.def  template.def  test.py  typical.def
task-launch/: functions.sh
taskdef/: README
temp/: README.txt  qsub.py
test/: test-db.sh  test-sched.sh  test-suite.sh
tests/: README  README.md  conftest.py  f  i  k  parsec  u
util/: README  README.txt  __hk_copy  __hk_delete  __hk_move  _check-vars  _checkvars  _cycle-time  _cycletime  _email-alert  _email-task  _file-transfer  _hk_copy.py  _hk_delete.py  _hk_move.py  _housekeep  _housekeeping  _jobscript  (+25 more)
(+7459 files in other folders)
