# THIS FILE IS PART OF THE CYLC SUITE ENGINE.
# Copyright (C) NIWA & British Crown (Met Office) & Contributors.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

[metadata]
name = cylc-flow
author = Hilary Oliver
url=https://cylc.github.io/
description = A workflow engine for cycling systems
keywords =
    cycling-workflows
    hpc
    job-scheduler
    metascheduler
    workflow-automation
    workflow-engine
    workflow-management
    scheduling
license = GPL
license_file = COPYING
platforms = any
classifiers =
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Atmospheric Science
python_requires = >=3.7
setup_requires=pytest-runner==4.4

[bdist_rpm]
requires =
    python3-colorama
    python-isodatetime
    python3-jinja2
    python3-MarkupSafe
    python3-zmq

[aliases]
# so that running python setup.py test invokes pytest
test = pytest

[options.entry_points]
# top level shell commands
console_scripts =
    clyc = cylc.flow.scripts.cylc:main
    cylc = cylc.flow.scripts.cylc:main
# cylc subcommands
cylc.command =
    broadcast = cylc.flow.scripts.broadcast:main
    cat-log = cylc.flow.scripts.cat_log:main
    check-versions = cylc.flow.scripts.check_versions:main
    clean = cylc.flow.scripts.clean:main
    client = cylc.flow.scripts.client:main
    cycle-point = cylc.flow.scripts.cycle_point:main
    diff = cylc.flow.scripts.diff:main
    dump = cylc.flow.scripts.dump:main
    edit = cylc.flow.scripts.edit:main
    ext-trigger = cylc.flow.scripts.ext_trigger:main
    extract-resources = cylc.flow.scripts.extract_resources:main
    function-run = cylc.flow.scripts.function_run:main
    get-site-config = cylc.flow.scripts.get_site_config:main
    get-suite-config = cylc.flow.scripts.get_suite_config:main
    get-suite-contact = cylc.flow.scripts.get_suite_contact:main
    get-suite-version = cylc.flow.scripts.get_suite_version:main
    graph = cylc.flow.scripts.graph:main
    hold = cylc.flow.scripts.hold:main
    install = cylc.flow.scripts.install:main
    jobs-kill = cylc.flow.scripts.jobs_kill:main
    jobs-poll = cylc.flow.scripts.jobs_poll:main
    jobs-submit = cylc.flow.scripts.jobs_submit:main
    kill = cylc.flow.scripts.kill:main
    list = cylc.flow.scripts.list:main
    message = cylc.flow.scripts.message:main
    ping = cylc.flow.scripts.ping:main
    poll = cylc.flow.scripts.poll:main
    psutils = cylc.flow.scripts.psutil:main
    release = cylc.flow.scripts.release:main
    reload = cylc.flow.scripts.reload:main
    remote-init = cylc.flow.scripts.remote_init:main
    remote-tidy = cylc.flow.scripts.remote_tidy:main
    remove = cylc.flow.scripts.remove:main
    report-timings = cylc.flow.scripts.report_timings:main
    restart = cylc.flow.scripts.restart:main
    run = cylc.flow.scripts.run:main
    scan = cylc.flow.scripts.scan:cli
    search = cylc.flow.scripts.search:main
    set-verbosity = cylc.flow.scripts.set_verbosity:main
    show = cylc.flow.scripts.show:main
    set-outputs = cylc.flow.scripts.set_outputs:main
    stop = cylc.flow.scripts.stop:main
    subscribe = cylc.flow.scripts.subscribe:main
    suite-state = cylc.flow.scripts.suite_state:main
    tui = cylc.flow.scripts.tui:main
    trigger = cylc.flow.scripts.trigger:main
    validate = cylc.flow.scripts.validate:main
    view = cylc.flow.scripts.view:main
# async functions to run within the scheduler main loop
cylc.main_loop =
    health_check = cylc.flow.main_loop.health_check
    auto_restart = cylc.flow.main_loop.auto_restart
    log_data_store = cylc.flow.main_loop.log_data_store
    log_main_loop = cylc.flow.main_loop.log_main_loop
    log_memory = cylc.flow.main_loop.log_memory
    prune_flow_labels = cylc.flow.main_loop.prune_flow_labels
